--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,6 +1,6 @@
 <p>Enter a URL to shorten</p>
 
 <%= simple_form_for @link do |form| %>
-  <%= form.input :url %>
+  <%= form.input :url, as: :string, label: false %>
   <%= form.submit %>
 <% end %>
